048 ==> 171989 - Can't set gps photo location on .nef images with Exiv2 - Use ExifTool instead.
049 ==> 173828 - Geolocation do not except Canon EOS 1D Mark III CR2-files with Exiv2 - Use ExifTool instead.
050 ==> 447371 - Date of videos seems incorrect.
051 ==> 453180 - "not valid" dates for video in "Adjust Time & Date".
052 ==> 453992 - Build error in digiKam Setup.
053 ==> 453630 - Metadata doesn 't always keep it's hierarchy when written with exiftool.
054 ==> 426951 - digiKam audio issue.
055 ==> 454318 - Save as Version in Imageeditor not accessible when using external raw editor (rawtherapee).
056 ==> 324967 - Add support of specific increase numbering offset with advance rename tool.
057 ==> 453275 - Renaming files is not folder aware, even with folder aware option.
058 ==> 454656 - When locales not set, crash occurs when opening "Settings -> Configure digiKam".
059 ==> 435377 - Speed up image preview.
060 ==> 382362 - Locale database mismatch between Windows and Linux.
061 ==> 452088 - Mixed up creation time and time of import.
062 ==> 444928 - Include rename functionality (F2) also to image import tool.
063 ==> 386072 - Can't access EXIF data on some (very few!) pictures from import camera window - works fine after that.
064 ==> 381214 - Import may mix up picture content and metadata of different pictures.
065 ==> 454739 - Find New Items is stuck at 0%.
066 ==> 440156 - Cant get Google Import/export to authenticate with Google on Mint 20.2 Cinnamon.
067 ==> 435384 - Export crash to google photos.
068 ==> 455893 - Build error with Qt5.
069 ==> 455876 - Handling of image orientation in modern image formats using ExifTool.
070 ==> 456237 - Crash after changing the collection
071 ==> 456263 - Missing feature for searching pictures containing actual detected faces.
072 ==> 439643 - Add count()-like condition to search.
073 ==> 425047 - Trash icon should reflect if trash is full or empty.
074 ==> 